2012-08-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c:  Remove all (deprecated) usages of
	_ANSI_ARGS_ and TCL_PARSE_PART1

2012-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc: [Bug 3544932]: Visual studio compiler check fails

2012-07-05 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed leaking callback data in ThreadSend()
	plus some minor cosmetic changes (tx to Gustaf Neumann).

2012-07-03 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: [Bugs 3534440, 3534581] fixed.
	Also, promoted jobId to be Tcl_WideInt (was uint).

2012-04-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadSpCmd.c:	Eliminate some tricky finalization
	problems by converting the SpBucket arrays from dynamic storage to
	static storage so they no longer need to be finalized.  Since they
	have fixed size of NUMSPBUCKETS, I don't see any strong reason not
	to do this.

2012-04-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadCmd.c: [Bug 1603234] Stop leak in [thread::transfer].

2011-12-05  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: Fix #define issue when compiling for Tcl 8.5.

2011-11-24   Jan Nijtmans <nijtmans@users.sourceforge.net>

	* generic/tclThread.h:    Only export Thread_Init(), nothing more.
	* generic/tclXkeylist.h
	* generic/threadSpCmd.h
	* generic/threadSvCmd.h
	* generic/threadSvCmd.c
	* generic/threadSvKeylistCmd.h
	* generic/threadSvListCmd.h

2011-11-20  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: Correct check for current thread in the
	ThreadReserve function [Bug 3411244].  Correct the order for releasing
	the interpreter and freeing memory, see check-in [6067508840].

2011-11-17  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: Refactor ThreadEventProc to make sure all paths
	out of the function call Tcl_Release on the necessary Tcl interpreters.
	Also, call ThreadErrorProc consistently whenever the return code is not